Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36701

command line client doesn't check session_track information

    XMLWordPrintable

Details

    • Can result in unexpected behaviour

    Description

      The command line client doesn't check session_track information and displays wrong database.

      How to repeat:

      $> mysql test
       
      MariaDB [test]> execute immediate "use test1";
      Query OK, 0 rows affected (0.000 sec)
       
      MariaDB [test]> select database();
      +------------+
      | database() |
      +------------+
      | test1      |
      +------------+
      1 row in set (0.000 sec)
      

      Only checked with 11.5.1 - but likely all versions are affected.

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              georg Georg Richter
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.