MDEV-36701 command line client doesn't check session_track information

subscribe for SESSION_TRACK_SCHEMA messages and change the db accordingly