client/mysql.cc
@@ -3200,6 +3200,19 @@ static int reconnect(void)
   return 0;
 }
 
+static void status_info_cb(void *data, enum enum_mariadb_status_info type, ...)
+{
+  va_list ap;
+  va_start(ap, type);
+  if (type == SESSION_TRACK_TYPE && va_arg(ap, int) == SESSION_TRACK_SCHEMA)
+  {
+    MARIADB_CONST_STRING *val= va_arg(ap, MARIADB_CONST_STRING *);
+    my_free(current_db);
+    current_db= my_strndup(PSI_NOT_INSTRUMENTED, val->str, val->length, MYF(MY_FAE));
+  }
+  va_end(ap);
+}
+
 static void get_current_db()
 {
   MYSQL_RES *res;
@@ -4972,6 +4985,7 @@ sql_real_connect(char *host,char *database,char *user,char *password,
     mysql_close(&mysql);
   }
   mysql_init(&mysql);
+  mysql_optionsv(&mysql, MARIADB_OPT_STATUS_CALLBACK, status_info_cb, NULL);
   if (opt_init_command)
     mysql_options(&mysql, MYSQL_INIT_COMMAND, opt_init_command);
   if (opt_connect_timeout)
